# cat-n-dog-n

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: final_results.md  part3_handoff.md  phase1_cnn_comparison.md  relatorio_final.md  runs_to_keep.md
notebooks/: etapa2_cnn_pytorch.ipynb  etapa3_transfer_learning.ipynb
runs/cnn_scratch_v2/artifacts/: experiment_config.json  history.csv  run_summary.json  test_predictions.csv
runs/transfer_comparison/: comparison_runs.csv  comparison_summary.csv
runs/transfer_comparison/convnext_tiny/seed_101/artifacts/: experiment_config.json  history.csv  run_summary.json
runs/transfer_comparison/convnext_tiny/seed_42/artifacts/: experiment_config.json  history.csv  run_summary.json
runs/transfer_comparison/convnext_tiny/seed_73/artifacts/: experiment_config.json  history.csv  run_summary.json
runs/transfer_comparison/efficientnet_b0/seed_101/artifacts/: history.csv  (+2 more)
scripts/: __init__.py  audit_dataset.py  compare_phase1_heads.py  compare_transfer.py  evaluate.py  evaluate_transfer.py  train.py  train_scratch.py  train_transfer.py
src/cnn_cats_dogs/: __init__.py  cli.py  compare.py  config.py  data.py  dataset_audit.py  engine.py  metrics.py  model.py  transfer.py  transfer_compare.py  transfer_config.py  transfer_data.py  transfer_engine.py  transfer_evaluate.py  transfer_models.py  utils.py  visualization.py
tests/: test_data_contract.py  test_dataset_audit.py  test_model.py  test_notebooks.py  test_transfer_config.py  test_transfer_data.py  test_transfer_models.py
(+33 files in other folders)
